--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,56 @@
-body {
-    margin: 0;
-    font-family: 'Raleway', sans-serif;
-    background-image: url("https://images.pexels.com/photos/158251/forest-the-sun-morning-tucholskie-158251.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-    background-color: #cccccc;
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
+html {
+    background: url(https://images.pexels.com/photos/158251/forest-the-sun-morning-tucholskie-158251.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940) bottom center;
     background-size: cover;
-    position: relative;
+}
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Raleway', sans-serif;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+    margin: 0 1.5vw;
+    font-size: 3.25vh;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    padding: 2vw;
+    display: block;
+}
+
+a:hover {
+    color: darkgray;
 }
 
 
-.hero-text {
+ .center-text {
+     line-height: 1.3em;
+     align-items: center;
+    justify-content: center;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+} 
+
+.nav-links {
+    position: absolute;
+    top: 25%;
+    left: 0%;
+}
+
+.hero-text {
+    color: white; 
     text-shadow: 2px 2px 4px #000000;
 }
